force-app/main/default/objects/Recommended_Action__mdt/Recommended_Action__mdt.object-meta.xml
<CustomObject>
    <label>Recommended Action</label>
    <pluralLabel>Recommended Actions</pluralLabel>
</CustomObject>