force-app/main/default/objects/Recommended_Action__mdt/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <label>Flow Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>