force-app/main/default/objects/Recommended_Action__mdt/fields/IconName__c.field-meta.xml
<CustomField>
    <fullName>IconName__c</fullName>
    <label>Icon Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>