force-app/main/default/objects/Recommended_Action__mdt/fields/IconVariant__c.field-meta.xml
<CustomField>
    <fullName>IconVariant__c</fullName>
    <label>Icon Variant</label>
    <length>20</length>
    <type>Text</type>
</CustomField>