force-app/main/default/objects/Recommended_Action__mdt/fields/SelectionCriteria__c.field-meta.xml
<CustomField>
    <fullName>SelectionCriteria__c</fullName>
    <label>Selection Criteria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>